<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_changeImage"
        android:title="@string/changeImage"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_createGroup"
        android:title="@string/createGroup"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_deleteGroup"
        android:title="@string/deleteGroup"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_addContact"
        android:title="@string/addContact"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_deleteContact"
        android:title="@string/deleteContact"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_signOff"
        android:title="@string/signOff"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_deleteAccount"
        android:title="@string/deleteAccount"
        app:showAsAction="never"
        />
</menu>