<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/imageView3"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/chatlogo"
         />

    <TextView
        android:id="@+id/textView"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/textView2"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn" />

    <View
        android:id="@+id/divider2"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/divider_style" />

    <TextView
        android:id="@+id/textView4"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:text="@string/UserMailNumber"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailOrPhoneNumberOrUsername"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/UserMailNumber"
        android:inputType="text"
        android:textColorHint="#A4FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:text="@string/passwordLogin"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/passwordLogin"
        android:inputType="textPassword"
        android:textColorHint="#A4FFFFFF"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/rememberMe"
        style="@style/loginStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rememberMe" />

    <Button
        android:id="@+id/signIn"
        style="@style/roundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/buttonSignIn" />

    <Button
        android:id="@+id/register"
        style="@style/roundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signUp" />

    <View
        android:id="@+id/divider3"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/divider_style" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/loginStyle"
        android:text="@string/copyright"
        />

</LinearLayout>